turtleart.lessons.turtleart.Main.SmallSquare.scala.error
Source:4: error: '=' expected but ';' found.
	for (i<- 1 to 4) {
^