turtleart.lessons.turtleart.Main.SmallSquare.scala.code
override def run() {
	var i
	for (i<- 1 to 4) {
		avance(100)
		droite
	}
}
